# gui-app

./: CMakeLists.txt  LICENSE  README.md
cmake/: gtk.cmake
include/: app_window.hpp  version.h.in
include/win32/: theme_synchronizer.hpp
res/: app.gresources.xml
res/ui/: app_window.xml
res/win32/: app.manifest  app.rc
src/: app_window.cpp  main.cpp
src/win32/: theme_synchronizer.cpp
